--- a/index.html
+++ b/index.html
@@ -43,3 +43,6 @@
   </footer>
 </body>
 </html>
+<a href="PASTE_YOUR_STRIPE_LINK_HERE" class="payment-button">
+    Get Started with Pro Monitoring
+</a>
