--- a/index.html
+++ b/index.html
@@ -33,6 +33,27 @@
     </section>
 
     <section>
+      <h2>Service Plans</h2>
+      <div class="pricing-card">
+        <h3>Pro AI Monitoring</h3>
+        <p><strong>$499.00 / month</strong></p>
+        <ul>
+          <li>24/7 Autonomous Threat Detection</li>
+          <li>Real-time Vulnerability Scanning</li>
+          <li>SOC2 & HIPAA Compliance Reporting</li>
+          <li>30-Day Free Trial</li>
+        </ul>
+        
+        <script async src="https://js.stripe.com/v3/buy-button.js"></script>
+        <stripe-buy-button
+          buy-button-id="buy_btn_1SuDM0DeqXwZ0JvqIKFVyT4n"
+          publishable-key="pk_live_51SoHeADeqXwZ0JvqNyWd0WHUc5MGWSAXmhhtq78IviZyKCGfT5NWsU3DkqfoctNwtwNg2M7CbVEzaa9wCLbrmSLW00sIv4jYNk"
+        >
+        </stripe-buy-button>
+      </div>
+    </section>
+
+    <section>
       <h2>Contact</h2>
       <p>Email: <a href="mailto:amos@cyberaidefenses.com">amos@cyberaidefenses.com</a></p>
     </section>
@@ -43,6 +64,3 @@
   </footer>
 </body>
 </html>
-<a href="PASTE_YOUR_STRIPE_LINK_HERE" class="payment-button">
-    Get Started with Pro Monitoring
-</a>
