--- a/index.html
+++ b/index.html
@@ -1,4 +1,11 @@
-<!DOCTYPE html>
+<nav>
+  <ul>
+    <li><a href="index.html">Home</a></li>
+    <li><a href="platform.html">Platform</a></li>
+    <li><a href="compliance.html">Compliance</a></li>
+    <li><a href="pricing.html" class="nav-cta">Get Started</a></li>
+  </ul>
+</nav><!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
