--- a/index.html
+++ b/index.html
@@ -13,11 +13,14 @@
   <title>Cyberaidefenses</title>
   <link rel="stylesheet" href="style.css">
 </head>
-<body>
-  <header>
-    <h1>Cyberaidefenses</h1>
-    <p>AI-Powered Cybersecurity & Cloud Defense</p>
-  </header>
+<body><nav>
+  <ul>
+    <li><a href="index.html">Home</a></li>
+    <li><a href="platform.html">Platform</a></li>
+    <li><a href="compliance.html">Compliance</a></li>
+    <li><a href="pricing.html" class="nav-cta">Get Started</a></li>
+  </ul>
+</nav>  </header>
 
   <main>
     <section>
