--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <li><a href="compliance.html">Compliance</a></li>
     <li><a href="pricing.html" class="nav-cta">Get Started</a></li>
   </ul>
-</nav><!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
