--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <nav>
- 
-<!DOCTYPE html>
+ <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
@@ -19,13 +18,11 @@
 
 </section>  <main>
     <section>
-      <h2>What We Do</h2>
-      <p>
-        Cyberaidefenses builds AI-driven security operations software that monitors
-        cloud infrastructure, detects cyber threats, and helps organizations respond
-        to incidents in real time.
-      </p>
-    </section>
+      <section id="what-we-do">
+  <h2>Next-Gen Security</h2>
+  <p>Cyberaidefenses provides autonomous AI-driven security for cloud infrastructure. We detect threats in real-time so you can focus on growing your business.</p>
+  <a href="solutions.html" style="color: #00e5ff; text-decoration: underline;">Learn more about our solutions →</a>
+</section>    </section>
 
     <section>
       <h2>Core Capabilities</h2>
