--- a/index.html
+++ b/index.html
@@ -15,8 +15,11 @@
     <li><a href="pricing.html" class="nav-cta">Get Started</a></li>
   </ul>
 </nav>  </header>
-
-</section>  <main>
+<section style="text-align: center;">
+    <h2>Next-Generation Security Operations</h2>
+    <p>We provide autonomous AI-driven security for cloud infrastructure, specifically tailored for mid-market AWS workloads.</p>
+    <a href="solutions.html" style="color: #00e5ff; font-weight: bold;">View our full suite of solutions →</a>
+</section></section>  <main>
     <section>
       <section id="what-we-do">
   <h2>Next-Gen Security</h2>
