--- a/index.html
+++ b/index.html
@@ -1,71 +1,59 @@
-<nav>
- <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Cyberaidefenses</title>
-  <link rel="stylesheet" href="style.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Cyberaidefenses | Autonomous AI Security</title>
+    <link rel="stylesheet" href="style.css">
 </head>
-<body><nav>
-  <ul>
-    <li><a href="index.html">Home</a></li>
-    <li><a href="platform.html">Platform</a></li>
-    <li><a href="compliance.html">Compliance</a></li>
-    <li><a href="pricing.html" class="nav-cta">Get Started</a></li>
-  </ul>
-</nav>  </header>
-<section style="text-align: center;">
-    <h2>Next-Generation Security Operations</h2>
-    <p>We provide autonomous AI-driven security for cloud infrastructure, specifically tailored for mid-market AWS workloads.</p>
-    <a href="solutions.html" style="color: #00e5ff; font-weight: bold;">View our full suite of solutions →</a>
-</section></section>  <main>
-    <section>
-      <section id="what-we-do">
-  <h2>Next-Gen Security</h2>
-  <p>Cyberaidefenses provides autonomous AI-driven security for cloud infrastructure. We detect threats in real-time so you can focus on growing your business.</p>
-  <a href="solutions.html" style="color: #00e5ff; text-decoration: underline;">Learn more about our solutions →</a>
-</section>    </section>
+<body>
 
-    <section>
-      <h2>Core Capabilities</h2>
-      <ul>
-        <li>AI Security Monitoring</li>
-        <li>Cloud Threat Detection (AWS)</li>
-        <li>Incident Response Automation</li>
-        <li>Security Operations (AI-SOC)</li>
-      </ul>
+<nav>
+    <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="solutions.html">Solutions</a></li>
+        <li><a href="platform.html">Platform</a></li>
+        <li><a href="compliance.html">Compliance</a></li>
+        <li><a href="pricing.html" class="nav-cta">Get Started</a></li>
+    </ul>
+</nav>
+
+<header class="hero-section">
+    <h1>Autonomous AI Security for the Modern Cloud</h1>
+    <p>Protecting mid-market enterprise infrastructure with 24/7 autonomous threat detection and SOC2-ready monitoring.</p>
+    <div class="hero-btns">
+        <a href="pricing.html" class="payment-button">Start 30-Day Free Trial</a>
+        <a href="solutions.html" class="secondary-btn">View Solutions</a>
+    </div>
+</header>
+
+<main class="container">
+    <section class="features-grid">
+        <div class="feature-item">
+            <h3>🛡️ AI-SOC Monitoring</h3>
+            <p>24/7 machine learning analysis of your security logs to catch threats humans miss.</p>
+        </div>
+        <div class="feature-item">
+            <h3>☁️ AWS Cloud Defense</h3>
+            <p>Purpose-built protection for AWS workloads, ensuring your infrastructure is hardened.</p>
+        </div>
+        <div class="feature-item">
+            <h3>⚡ Rapid Response</h3>
+            <p>Automated containment protocols that reduce your Time-to-Resolution (TTR) to seconds.</p>
+        </div>
     </section>
 
-    <section>
-      <h2>Service Plans</h2>
-      <div class="pricing-card">
-        <h3>Pro AI Monitoring</h3>
-        <p><strong>$499.00 / month</strong></p>
-        <ul>
-          <li>24/7 Autonomous Threat Detection</li>
-          <li>Real-time Vulnerability Scanning</li>
-          <li>SOC2 & HIPAA Compliance Reporting</li>
-          <li>30-Day Free Trial</li>
-        </ul>
-        
-        <script async src="https://js.stripe.com/v3/buy-button.js"></script>
-        <stripe-buy-button
-          buy-button-id="buy_btn_1SuDM0DeqXwZ0JvqIKFVyT4n"
-          publishable-key="pk_live_51SoHeADeqXwZ0JvqNyWd0WHUc5MGWSAXmhhtq78IviZyKCGfT5NWsU3DkqfoctNwtwNg2M7CbVEzaa9wCLbrmSLW00sIv4jYNk"
-        >
-        </stripe-buy-button>
-      </div>
+    <section style="text-align: center; padding: 40px 0;">
+        <h2>Ready to Secure Your Infrastructure?</h2>
+        <p>Join the mid-market leaders using Cyberaidefenses to automate their cloud security.</p>
+        <br>
+        <a href="mailto:amos@cyberaidefenses.com" style="color: #00e5ff; text-decoration: none; font-weight: bold;">Contact Sales: amos@cyberaidefenses.com</a>
     </section>
+</main>
 
-    <section>
-      <h2>Contact</h2>
-      <p>Email: <a href="mailto:amos@cyberaidefenses.com">amos@cyberaidefenses.com</a></p>
-    </section>
-  </main>
+<footer>
+    <p>© 2026 Cyberaidefenses LLC. All rights reserved.</p>
+</footer>
 
-  <footer>
-    <p>© 2026 Cyberaidefenses LLC</p>
-  </footer>
 </body>
 </html>
