--- a/index.html
+++ b/index.html
@@ -9,15 +9,17 @@
 <body>
 
 <nav>
-    <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="solutions.html">Solutions</a></li>
-        <li><a href="platform.html">Platform</a></li>
-        <li><a href="compliance.html">Compliance</a></li>
-        <li><a href="pricing.html" class="nav-cta">Get Started</a></li>
-    </ul>
+    <div class="nav-container">
+        <div class="logo">Cyberaidefenses</div>
+        <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="solutions.html">Solutions</a></li>
+            <li><a href="platform.html">Platform</a></li>
+            <li><a href="compliance.html">Compliance</a></li>
+            <li><a href="pricing.html" class="nav-cta">Get Started</a></li>
+        </ul>
+    </div>
 </nav>
-
 <header class="hero-section">
     <h1>Autonomous AI Security for the Modern Cloud</h1>
     <p>Protecting mid-market enterprise infrastructure with 24/7 autonomous threat detection and SOC2-ready monitoring.</p>
