--- a/index.html
+++ b/index.html
@@ -19,8 +19,7 @@
             <li><a href="pricing.html" class="nav-cta">Get Started</a></li>
         </ul>
     </div>
-</nav>
-<header class="hero-section">
+</nav><header class="hero-section">
     <h1>Autonomous AI Security for the Modern Cloud</h1>
     <p>Protecting mid-market enterprise infrastructure with 24/7 autonomous threat detection and SOC2-ready monitoring.</p>
     <div class="hero-btns">
