--- a/solutions.html
+++ b/solutions.html
@@ -8,6 +8,8 @@
 </head>
 <body>
     <nav>
+    <div class="nav-container">
+        <div class="logo">Cyberaidefenses</div>
         <ul>
             <li><a href="index.html">Home</a></li>
             <li><a href="solutions.html">Solutions</a></li>
@@ -15,8 +17,8 @@
             <li><a href="compliance.html">Compliance</a></li>
             <li><a href="pricing.html" class="nav-cta">Get Started</a></li>
         </ul>
-    </nav>
-
+    </div>
+</nav>
     <header>
         <h1>Enterprise-Grade Solutions</h1>
         <p>Deep-tier security for mid-market AWS workloads.</p>
