--- a/pricing.html
+++ b/pricing.html
@@ -1,11 +1,16 @@
 <nav>
-  <ul>
-    <li><a href="index.html">Home</a></li>
-    <li><a href="platform.html">Platform</a></li>
-    <li><a href="compliance.html">Compliance</a></li>
-    <li><a href="pricing.html" class="nav-cta">Get Started</a></li>
-  </ul>
-</nav><!DOCTYPE html>
+    <div class="nav-container">
+        <div class="logo">Cyberaidefenses</div>
+        <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="solutions.html">Solutions</a></li>
+            <li><a href="platform.html">Platform</a></li>
+            <li><a href="compliance.html">Compliance</a></li>
+            <li><a href="pricing.html" class="nav-cta">Get Started</a></li>
+        </ul>
+    </div>
+</nav>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
