--- a/pricing.html
+++ b/pricing.html
@@ -9,8 +9,7 @@
             <li><a href="pricing.html" class="nav-cta">Get Started</a></li>
         </ul>
     </div>
-</nav>
-<!DOCTYPE html>
+</nav><!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
