--- a/solutions.html
+++ b/solutions.html
@@ -18,8 +18,7 @@
             <li><a href="pricing.html" class="nav-cta">Get Started</a></li>
         </ul>
     </div>
-</nav>
-    <header>
+</nav>    <header>
         <h1>Enterprise-Grade Solutions</h1>
         <p>Deep-tier security for mid-market AWS workloads.</p>
     </header>
