--- a/solutions.html
+++ b/solutions.html
@@ -18,26 +18,23 @@
             <li><a href="pricing.html" class="nav-cta">Get Started</a></li>
         </ul>
     </div>
-</nav>    <header>
-        <h1>Enterprise-Grade Solutions</h1>
-        <p>Deep-tier security for mid-market AWS workloads.</p>
-    </header>
-
-    <main class="services-container">
-        <div class="service-card">
-            <h3>AI-Powered Cybersecurity</h3>
+        <main class="container">
+    <div class="features-grid">
+        <div class="feature-item">
+            <h3 style="color: #00e5ff;">AI-Powered Cybersecurity</h3>
             <p>Experience unparalleled protection specifically designed for mid-market organizations and AWS workloads. Our advanced platform continuously monitors your cloud infrastructure, detecting potential threats in real time.</p>
         </div>
 
-        <div class="service-card">
-            <h3>Cloud Infrastructure Monitoring</h3>
+        <div class="feature-item">
+            <h3 style="color: #00e5ff;">Cloud Infrastructure Monitoring</h3>
             <p>Get comprehensive visibility into your cloud environments. Track resource utilization, monitor application health, and receive AI-driven alerts for any anomalies indicating security threats.</p>
         </div>
 
-        <div class="service-card">
-            <h3>Real-Time Threat Detection</h3>
+        <div class="feature-item">
+            <h3 style="color: #00e5ff;">Real-Time Threat Detection</h3>
             <p>Stay ahead with advanced AI algorithms that scan your network for suspicious activity. Integrated analytics allow your team to respond to incidents and minimize damage instantly.</p>
         </div>
+    </div>
     </main>
 
     <footer>
