--- a/solutions.html
+++ b/solutions.html
@@ -42,3 +42,20 @@
     </footer>
 </body>
 </html>
+/* Ensure the grid is always balanced */
+.features-grid {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
+    gap: 25px;
+    margin-top: 40px;
+}
+
+.feature-item h3 {
+    margin-bottom: 15px;
+    font-size: 1.4rem;
+}
+
+.feature-item p {
+    line-height: 1.7;
+    color: #d1d5db; /* Softer white for easier reading */
+}
