--- a/solutions.html
+++ b/solutions.html
@@ -18,25 +18,29 @@
             <li><a href="pricing.html" class="nav-cta">Get Started</a></li>
         </ul>
     </div>
-        <main class="container">
+       <main class="container">
     <div class="features-grid">
+        
         <div class="feature-item">
-            <h3 style="color: #00e5ff;">AI-Powered Cybersecurity</h3>
-            <p>Experience unparalleled protection specifically designed for mid-market organizations and AWS workloads. Our advanced platform continuously monitors your cloud infrastructure, detecting potential threats in real time.</p>
+            <img src="https://images.unsplash.com/photo-1550751827-4bd374c3f58b?auto=format&fit=crop&w=800" class="card-image" alt="Security Assessment">
+            <h3 style="color: #0066ff;">Step 1: Initial Assessment</h3>
+            <p>Comprehensive evaluation of your current cloud infrastructure to identify immediate vulnerabilities and compliance gaps.</p>
         </div>
 
         <div class="feature-item">
-            <h3 style="color: #00e5ff;">Cloud Infrastructure Monitoring</h3>
-            <p>Get comprehensive visibility into your cloud environments. Track resource utilization, monitor application health, and receive AI-driven alerts for any anomalies indicating security threats.</p>
+            <img src="https://images.unsplash.com/photo-1563986768609-322da13575f3?auto=format&fit=crop&w=800" class="card-image" alt="Cyber Strategy">
+            <h3 style="color: #0066ff;">Step 2: Strategy Development</h3>
+            <p>Tailoring a unique AI-driven security roadmap that aligns with your specific AWS workload requirements and business goals.</p>
         </div>
 
         <div class="feature-item">
-            <h3 style="color: #00e5ff;">Real-Time Threat Detection</h3>
-            <p>Stay ahead with advanced AI algorithms that scan your network for suspicious activity. Integrated analytics allow your team to respond to incidents and minimize damage instantly.</p>
+            <img src="https://images.unsplash.com/photo-1558494949-ef010cbdcc48?auto=format&fit=crop&w=800" class="card-image" alt="AI Monitoring">
+            <h3 style="color: #0066ff;">Step 3: AI Monitoring</h3>
+            <p>Deploying our autonomous SOC platform for real-time threat detection and automated response to keep your data secure 24/7.</p>
         </div>
+
     </div>
-    </main>
-
+</main>
     <footer>
         <p>&copy; 2026 Cyberaidefenses LLC</p>
     </footer>
