--- a/solutions.html
+++ b/solutions.html
@@ -23,25 +23,24 @@
         
         <div class="feature-item">
             <img src="https://images.unsplash.com/photo-1550751827-4bd374c3f58b?auto=format&fit=crop&w=800" class="card-image" alt="Security Assessment">
-            <h3 style="color: #0066ff;">Step 1: Initial Assessment</h3>
-            <p>Comprehensive evaluation of your current cloud infrastructure to identify immediate vulnerabilities and compliance gaps.</p>
+            <h3>Step 1: Initial Assessment</h3>
+            <p>We perform a comprehensive evaluation of your current cloud infrastructure to identify immediate vulnerabilities and regulatory compliance gaps.</p>
         </div>
 
         <div class="feature-item">
             <img src="https://images.unsplash.com/photo-1563986768609-322da13575f3?auto=format&fit=crop&w=800" class="card-image" alt="Cyber Strategy">
-            <h3 style="color: #0066ff;">Step 2: Strategy Development</h3>
-            <p>Tailoring a unique AI-driven security roadmap that aligns with your specific AWS workload requirements and business goals.</p>
+            <h3>Step 2: Strategy Development</h3>
+            <p>Our team tailors a unique AI-driven security roadmap that aligns specifically with your AWS workload requirements and long-term business goals.</p>
         </div>
 
         <div class="feature-item">
             <img src="https://images.unsplash.com/photo-1558494949-ef010cbdcc48?auto=format&fit=crop&w=800" class="card-image" alt="AI Monitoring">
-            <h3 style="color: #0066ff;">Step 3: AI Monitoring</h3>
-            <p>Deploying our autonomous SOC platform for real-time threat detection and automated response to keep your data secure 24/7.</p>
+            <h3>Step 3: AI Monitoring</h3>
+            <p>We deploy our autonomous SOC platform for real-time threat detection and automated response, ensuring your data remains secure and compliant 24/7.</p>
         </div>
 
     </div>
-</main>
-    <footer>
+</main>    <footer>
         <p>&copy; 2026 Cyberaidefenses LLC</p>
     </footer>
 </body>
