--- a/solutions.html
+++ b/solutions.html
@@ -18,32 +18,24 @@
             <li><a href="pricing.html" class="nav-cta">Get Started</a></li>
         </ul>
     </div>
-       <main class="container">
-    <div class="features-grid">
-        
-        <div class="feature-item">
-            <img src="https://images.unsplash.com/photo-1550751827-4bd374c3f58b?auto=format&fit=crop&w=800" class="card-image" alt="Security Assessment">
-            <h3>Step 1: Initial Assessment</h3>
-            <p>We perform a comprehensive evaluation of your current cloud infrastructure to identify immediate vulnerabilities and regulatory compliance gaps.</p>
-        </div>
+/* Ensure the grid is always balanced */
+.features-grid {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
+    gap: 25px;
+    margin-top: 40px;
+}
 
-        <div class="feature-item">
-            <img src="https://images.unsplash.com/photo-1563986768609-322da13575f3?auto=format&fit=crop&w=800" class="card-image" alt="Cyber Strategy">
-            <h3>Step 2: Strategy Development</h3>
-            <p>Our team tailors a unique AI-driven security roadmap that aligns specifically with your AWS workload requirements and long-term business goals.</p>
-        </div>
+.feature-item h3 {
+    margin-bottom: 15px;
+    font-size: 1.4rem;
+    color: #0066ff !important; /* Update to professional blue for white background */
+}
 
-        <div class="feature-item">
-            <img src="https://images.unsplash.com/photo-1558494949-ef010cbdcc48?auto=format&fit=crop&w=800" class="card-image" alt="AI Monitoring">
-            <h3>Step 3: AI Monitoring</h3>
-            <p>We deploy our autonomous SOC platform for real-time threat detection and automated response, ensuring your data remains secure and compliant 24/7.</p>
-        </div>
-
-    </div>
-</main>    <footer>
-        <p>&copy; 2026 Cyberaidefenses LLC</p>
-    </footer>
-</body>
+.feature-item p {
+    line-height: 1.7;
+    color: #4b5563 !important; /* Changed from #d1d5db to dark gray for visibility on white */
+}</body>
 </html>
 /* Ensure the grid is always balanced */
 .features-grid {
