--- a/index.html
+++ b/index.html
@@ -29,27 +29,21 @@
 </header>
 
 <main class="container">
-            <h3>🛡️ AI-SOC Monitoring</h3>
+    <div class="features-grid">
+        <div class="feature-item">
+            <h3 style="color: #004a99;">🛡️ AI-SOC Monitoring</h3>
             <p>24/7 machine learning analysis of your security logs to catch threats humans miss.</p>
         </div>
         <div class="feature-item">
-            <h3>☁️ AWS Cloud Defense</h3>
+            <h3 style="color: #004a99;">☁️ AWS Cloud Defense</h3>
             <p>Purpose-built protection for AWS workloads, ensuring your infrastructure is hardened.</p>
         </div>
         <div class="feature-item">
-            <h3>⚡ Rapid Response</h3>
+            <h3 style="color: #004a99;">⚡ Rapid Response</h3>
             <p>Automated containment protocols that reduce your Time-to-Resolution (TTR) to seconds.</p>
         </div>
-    </section>
-
-    <section style="text-align: center; padding: 40px 0;">
-        <h2>Ready to Secure Your Infrastructure?</h2>
-        <p>Join the mid-market leaders using Cyberaidefenses to automate their cloud security.</p>
-        <br>
-        <a href="mailto:amos@cyberaidefenses.com" style="color: #00e5ff; text-decoration: none; font-weight: bold;">Contact Sales: amos@cyberaidefenses.com</a>
-    </section>
+    </div>
 </main>
-
 <footer>
     <p>© 2026 Cyberaidefenses LLC. All rights reserved.</p>
 </footer>
