--- a/solutions.html
+++ b/solutions.html
@@ -7,7 +7,8 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <nav>
+
+<nav>
     <div class="nav-container">
         <div class="logo">Cyberaidefenses</div>
         <ul>
@@ -18,41 +19,38 @@
             <li><a href="pricing.html" class="nav-cta">Get Started</a></li>
         </ul>
     </div>
-20 <main class="container">
-21     <div class="features-grid">
-22         <div class="feature-item">
-23             <img src="https://images.unsplash.com/photo-1550751827-4bd374c3f58b?auto=format&fit=crop&w=800" class="card-image" alt="Security Assessment">
-24             <h3>Step 1: Initial Assessment</h3>
-25             <p>Comprehensive evaluation of your current cloud infrastructure to identify immediate vulnerabilities and compliance gaps.</p>
-26         </div>
-27         <div class="feature-item">
-28             <img src="https://images.unsplash.com/photo-1563986768609-322da13575f3?auto=format&fit=crop&w=800" class="card-image" alt="Cyber Strategy">
-29             <h3>Step 2: Strategy Development</h3>
-30             <p>Tailoring a unique AI-driven security roadmap that aligns with your specific AWS workload requirements and business goals.</p>
-31         </div>
-32         <div class="feature-item">
-33             <img src="https://images.unsplash.com/photo-1558494949-ef010cbdcc48?auto=format&fit=crop&w=800" class="card-image" alt="AI Monitoring">
-34             <h3>Step 3: AI Monitoring</h3>
-35             <p>Deploying our autonomous SOC platform for real-time threat detection and automated response to keep your data secure 24/7.</p>
-36         </div>
-37     </div>
-38 </main>
-39
-40 </body>
-41 </html>/* Ensure the grid is always balanced */
-.features-grid {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
-    gap: 25px;
-    margin-top: 40px;
-}
+</nav>
 
-.feature-item h3 {
-    margin-bottom: 15px;
-    font-size: 1.4rem;
-}
+<header>
+    <h1>Enterprise Security Solutions</h1>
+    <p>Professional protection for your cloud infrastructure.</p>
+</header>
 
-.feature-item p {
-    line-height: 1.7;
-    color: #d1d5db; /* Softer white for easier reading */
-}
+<main class="container">
+    <div class="features-grid">
+        <div class="feature-item">
+            <img src="https://images.unsplash.com/photo-1550751827-4bd374c3f58b?auto=format&fit=crop&w=800" class="card-image" alt="Security Assessment">
+            <h3>Step 1: Initial Assessment</h3>
+            <p>Comprehensive evaluation of your current cloud infrastructure to identify immediate vulnerabilities and compliance gaps.</p>
+        </div>
+
+        <div class="feature-item">
+            <img src="https://images.unsplash.com/photo-1563986768609-322da13575f3?auto=format&fit=crop&w=800" class="card-image" alt="Strategy Development">
+            <h3>Step 2: Strategy Development</h3>
+            <p>Tailoring a unique AI-driven security roadmap that aligns with your specific AWS workload requirements and business goals.</p>
+        </div>
+
+        <div class="feature-item">
+            <img src="https://images.unsplash.com/photo-1558494949-ef010cbdcc48?auto=format&fit=crop&w=800" class="card-image" alt="AI Monitoring">
+            <h3>Step 3: AI Monitoring</h3>
+            <p>Deploying our autonomous SOC platform for real-time threat detection and automated response to keep your data secure 24/7.</p>
+        </div>
+    </div>
+</main>
+
+<footer>
+    <p>© 2026 Cyberaidefenses LLC</p>
+</footer>
+
+</body>
+</html>
