--- a/solutions.html
+++ b/solutions.html
@@ -16,39 +16,42 @@
             <li><a href="solutions.html">Solutions</a></li>
             <li><a href="platform.html">Platform</a></li>
             <li><a href="compliance.html">Compliance</a></li>
-            <li><a href="pricing.html" class="nav-cta">Get Started</a></li>
+            <li><a href="pricing.html">Pricing</a></li>
         </ul>
     </div>
 </nav>
 
-<header>
-    <h1>Enterprise Security Solutions</h1>
-    <p>Professional protection for your cloud infrastructure.</p>
-</header>
-
 <main class="container">
-    <div class="features-grid">
-        <div class="feature-item">
-            <img src="https://images.unsplash.com/photo-1550751827-4bd374c3f58b?auto=format&fit=crop&w=800" class="card-image" alt="Security Assessment">
-            <h3>Step 1: Initial Assessment</h3>
-            <p>Comprehensive evaluation of your current cloud infrastructure to identify immediate vulnerabilities and compliance gaps.</p>
+    <div class="solutions-grid">
+        
+        <div class="solution-card">
+            <img src="https://images.unsplash.com/photo-1550751827-4bd374c3f58b?auto=format&fit=crop&w=800" class="card-image" alt="Cybersecurity Analysis">
+            <div class="card-text">
+                <h2>Step 1: Initial Assessment</h2>
+                <p>Comprehensive evaluation of your current cloud infrastructure to identify immediate vulnerabilities and compliance gaps using our proprietary scanning engine.</p>
+            </div>
         </div>
 
-        <div class="feature-item">
-            <img src="https://images.unsplash.com/photo-1563986768609-322da13575f3?auto=format&fit=crop&w=800" class="card-image" alt="Strategy Development">
-            <h3>Step 2: Strategy Development</h3>
-            <p>Tailoring a unique AI-driven security roadmap that aligns with your specific AWS workload requirements and business goals.</p>
+        <div class="solution-card">
+            <img src="https://images.unsplash.com/photo-1563986768609-322da13575f3?auto=format&fit=crop&w=800" class="card-image" alt="Strategy Planning">
+            <div class="card-text">
+                <h2>Step 2: Strategy Development</h2>
+                <p>Tailoring a unique AI-driven security roadmap that aligns with your specific AWS workload requirements and long-term business continuity goals.</p>
+            </div>
         </div>
 
-        <div class="feature-item">
+        <div class="solution-card">
             <img src="https://images.unsplash.com/photo-1558494949-ef010cbdcc48?auto=format&fit=crop&w=800" class="card-image" alt="AI Monitoring">
-            <h3>Step 3: AI Monitoring</h3>
-            <p>Deploying our autonomous SOC platform for real-time threat detection and automated response to keep your data secure 24/7.</p>
+            <div class="card-text">
+                <h2>Step 3: AI Monitoring</h2>
+                <p>Deploying our autonomous SOC platform for real-time threat detection and automated response to keep your data secure and compliant 24/7.</p>
+            </div>
         </div>
+
     </div>
 </main>
 
-<footer>
+<footer style="text-align: center; padding: 40px; color: #4b5563;">
     <p>© 2026 Cyberaidefenses LLC</p>
 </footer>
 
