--- a/index.html
+++ b/index.html
@@ -27,19 +27,23 @@
         <a href="solutions.html" class="secondary-btn">View Solutions</a>
     </div>
 </header>
+<header class="container" style="text-align: center; padding: 120px 40px;">
+    <h1 style="font-size: 3.5rem; margin-bottom: 20px;">Autonomous AI Security for the Modern Cloud</h1>
+    <p style="color: #9ca3af; font-size: 1.25rem; max-width: 800px; margin: 0 auto;">Protecting mid-market enterprise infrastructure with 24/7 autonomous threat detection and SOC2-ready monitoring.</p>
+</header>
 
 <main class="container">
     <div class="features-grid">
         <div class="feature-item">
-            <h3 style="color: #004a99;">🛡️ AI-SOC Monitoring</h3>
+            <h3>🛡️ AI-SOC Monitoring</h3>
             <p>24/7 machine learning analysis of your security logs to catch threats humans miss.</p>
         </div>
         <div class="feature-item">
-            <h3 style="color: #004a99;">☁️ AWS Cloud Defense</h3>
+            <h3>☁️ AWS Cloud Defense</h3>
             <p>Purpose-built protection for AWS workloads, ensuring your infrastructure is hardened.</p>
         </div>
         <div class="feature-item">
-            <h3 style="color: #004a99;">⚡ Rapid Response</h3>
+            <h3>⚡ Rapid Response</h3>
             <p>Automated containment protocols that reduce your Time-to-Resolution (TTR) to seconds.</p>
         </div>
     </div>
