--- a/solutions.html
+++ b/solutions.html
@@ -32,25 +32,25 @@
             </div>
         </div>
 
-        <div class="solution-card">
-            <img src="https://images.unsplash.com/photo-1563986768609-322da13575f3?auto=format&fit=crop&w=800" class="card-image" alt="Strategy Planning">
-            <div class="card-text">
-                <h2>Step 2: Strategy Development</h2>
-                <p>Tailoring a unique AI-driven security roadmap that aligns with your specific AWS workload requirements and long-term business continuity goals.</p>
-            </div>
+       <main class="container">
+    <div class="features-grid">
+        <div class="feature-item">
+            <img src="https://images.unsplash.com/photo-1550751827-4bd374c3f58b?auto=format&fit=crop&w=800" class="card-image" alt="Security assessment">
+            <h3>Step 1: Initial Assessment</h3>
+            <p>Full evaluation of your infrastructure to identify immediate vulnerabilities.</p>
         </div>
-
-        <div class="solution-card">
-            <img src="https://images.unsplash.com/photo-1558494949-ef010cbdcc48?auto=format&fit=crop&w=800" class="card-image" alt="AI Monitoring">
-            <div class="card-text">
-                <h2>Step 3: AI Monitoring</h2>
-                <p>Deploying our autonomous SOC platform for real-time threat detection and automated response to keep your data secure and compliant 24/7.</p>
-            </div>
+        <div class="feature-item">
+            <img src="https://images.unsplash.com/photo-1563986768609-322da13575f3?auto=format&fit=crop&w=800" class="card-image" alt="Strategy planning">
+            <h3>Step 2: Strategy Development</h3>
+            <p>A customized AI roadmap built for your specific AWS workload requirements.</p>
         </div>
-
+        <div class="feature-item">
+            <img src="https://images.unsplash.com/photo-1558494949-ef010cbdcc48?auto=format&fit=crop&w=800" class="card-image" alt="Cloud monitoring">
+            <h3>Step 3: AI Monitoring</h3>
+            <p>Real-time autonomous threat detection and response deployed 24/7.</p>
+        </div>
     </div>
 </main>
-
 <footer style="text-align: center; padding: 40px; color: #4b5563;">
     <p>© 2026 Cyberaidefenses LLC</p>
 </footer>
