--- a/solutions.html
+++ b/solutions.html
@@ -7,20 +7,29 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+<main class="container">
+    <div class="features-grid">
+        
+        <div class="feature-item">
+            <img src="https://images.unsplash.com/photo-1550751827-4bd374c3f58b?auto=format&fit=crop&w=800" class="card-image" alt="Security Assessment">
+            <h3>Step 1: Initial Assessment</h3>
+            <p>Comprehensive evaluation of your cloud infrastructure to identify immediate vulnerabilities and compliance gaps using our proprietary scanning engine.</p>
+        </div>
 
-<nav>
-    <div class="nav-container">
-        <div class="logo">Cyberaidefenses</div>
-        <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="solutions.html">Solutions</a></li>
-            <li><a href="platform.html">Platform</a></li>
-            <li><a href="compliance.html">Compliance</a></li>
-            <li><a href="pricing.html">Pricing</a></li>
-        </ul>
+        <div class="feature-item">
+            <img src="https://images.unsplash.com/photo-1563986768609-322da13575f3?auto=format&fit=crop&w=800" class="card-image" alt="Strategy Development">
+            <h3>Step 2: Strategy Development</h3>
+            <p>A customized AI roadmap built for your specific AWS workload requirements and business continuity goals.</p>
+        </div>
+
+        <div class="feature-item">
+            <img src="https://images.unsplash.com/photo-1558494949-ef010cbdcc48?auto=format&fit=crop&w=800" class="card-image" alt="AI Monitoring">
+            <h3>Step 3: AI Monitoring</h3>
+            <p>Real-time autonomous threat detection and response deployed 24/7 to keep your data secure and compliant.</p>
+        </div>
+
     </div>
-</nav>
-
+</main>
 <main class="container">
     <div class="solutions-grid">
         
