--- a/solutions.html
+++ b/solutions.html
@@ -1,4 +1,15 @@
-<!DOCTYPE html>
+<nav>
+    <div class="nav-container">
+        <div class="logo">CYBERAIDEFENSES.COM</div>
+        <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="solutions.html">Solutions</a></li>
+            <li><a href="platform.html">Platform</a></li>
+            <li><a href="pricing.html">Pricing</a></li>
+            <li><a href="contact.html" class="nav-cta">CONTACT</a></li>
+        </ul>
+    </div>
+</nav><!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
