--- a/solutions.html
+++ b/solutions.html
@@ -6,8 +6,8 @@
     <title>Solutions | Cyberaidefenses</title>
     <link rel="stylesheet" href="style.css">
     <style>
-        /* Hidden text styling for "Learn More" */
         .more-info { display: none; margin-top: 15px; color: #9ca3af; font-size: 0.95rem; line-height: 1.6; }
+        .learn-more-btn { color: #38bdf8; text-decoration: none; font-weight: bold; cursor: pointer; display: inline-block; margin-top: 10px; }
     </style>
 </head>
 <body>
@@ -17,7 +17,7 @@
         <div class="logo">CYBERAIDEFENSES.COM</div>
         <ul>
             <li><a href="index.html">Home</a></li>
-            <li><a href="solutions.html" style="color: #38bdf8;">Solutions</a></li>
+            <li><a href="solutions.html">Solutions</a></li>
             <li><a href="platform.html">Platform</a></li>
             <li><a href="pricing.html">Pricing</a></li>
             <li><a href="contact.html" class="nav-cta">CONTACT</a></li>
@@ -33,11 +33,11 @@
 <main class="container">
     <div class="features-grid">
         <div class="feature-item">
-            <img src="https://images.unsplash.com/photo-1550751827-4bd374c3f58b?auto=format&fit=crop&w=800" class="card-image" alt="Security Assessment">
+            <img src="https://images.unsplash.com/photo-1550751827-4bd374c3f58b?auto=format&fit=crop&w=800" class="card-image" alt="Initial Assessment">
             <div class="feature-content">
                 <h3>Step 1: Initial Assessment</h3>
-                <p>Comprehensive evaluation of your current cloud infrastructure to identify immediate vulnerabilities.</p>
-                <a href="javascript:void(0)" onclick="toggleInfo('info1')" style="color: #38bdf8; text-decoration: none; font-weight: bold;">Learn More</a>
+                <p>Comprehensive evaluation of your cloud infrastructure to identify immediate vulnerabilities.</p>
+                <span class="learn-more-btn" onclick="toggleInfo('info1')">Learn More</span>
                 <div id="info1" class="more-info">Our assessment analyzes every layer of your network, ensuring compliance gaps are identified before they can be exploited.</div>
             </div>
         </div>
@@ -47,17 +47,17 @@
             <div class="feature-content">
                 <h3>Step 2: Strategy Development</h3>
                 <p>A customized AI roadmap built for your specific AWS workload requirements and business goals.</p>
-                <a href="javascript:void(0)" onclick="toggleInfo('info2')" style="color: #38bdf8; text-decoration: none; font-weight: bold;">Learn More</a>
+                <span class="learn-more-btn" onclick="toggleInfo('info2')">Learn More</span>
                 <div id="info2" class="more-info">We design a unique defense strategy that balances high-level security with your organization's operational continuity.</div>
             </div>
         </div>
 
         <div class="feature-item">
-            <img src="https://images.unsplash.com/photo-1558494949-ef010cbdcc48?auto=format&fit=crop&w=800" class="card-image" alt="AI Monitoring">
+            <img src="https://images.unsplash.com/photo-1558494949-ef010cbdcc48?auto=format&fit=crop&w=800" class="card-image" alt="Implementation">
             <div class="feature-content">
-                <h3>Step 3: Implementation</h3>
+                <h3>Step 3: AI Monitoring</h3>
                 <p>Real-time autonomous threat detection and response deployed 24/7 to keep your data secure.</p>
-                <a href="javascript:void(0)" onclick="toggleInfo('info3')" style="color: #38bdf8; text-decoration: none; font-weight: bold;">Learn More</a>
+                <span class="learn-more-btn" onclick="toggleInfo('info3')">Learn More</span>
                 <div id="info3" class="more-info">Deployment of our autonomous SOC platform ensures your infrastructure is monitored every second of every day.</div>
             </div>
         </div>
@@ -65,10 +65,10 @@
         <div class="feature-item">
             <img src="https://images.unsplash.com/photo-1522071820081-009f0129c71c?auto=format&fit=crop&w=800" class="card-image" alt="Support Team">
             <div class="feature-content">
-                <h3>Step 4: Improvement & Support</h3>
+                <h3>Step 4: Continuous Support</h3>
                 <p>Ongoing optimization and expert support to ensure your security posture evolves with new threats.</p>
-                <a href="javascript:void(0)" onclick="toggleInfo('info4')" style="color: #38bdf8; text-decoration: none; font-weight: bold;">Learn More</a>
-                <div id="info4" class="more-info">Cybersecurity is an ongoing process. Our team regularly reviews your posture, analyzes threat data, and updates strategies. We offer 24/7 support, ensuring you can respond quickly to any incidents that may arise.</div>
+                <span class="learn-more-btn" onclick="toggleInfo('info4')">Learn More</span>
+                <div id="info4" class="more-info">Cybersecurity is an ongoing process. Our team regularly reviews your security posture, analyzes threat data, and updates strategies as needed to adapt to an ever-changing cyber landscape. We offer 24/7 support, ensuring that your organization can respond quickly to any incidents that may arise.</div>
             </div>
         </div>
     </div>
@@ -77,8 +77,7 @@
 <script>
     function toggleInfo(id) {
         var x = document.getElementById(id);
-        if (x.style.display === "block") { x.style.display = "none"; } 
-        else { x.style.display = "block"; }
+        x.style.display = (x.style.display === "block") ? "none" : "block";
     }
 </script>
 
