--- a/solutions.html
+++ b/solutions.html
@@ -53,15 +53,13 @@
         </div>
 
         <div class="feature-item">
-            <img src="https://images.unsplash.com/photo-1558494949-ef010cbdcc48?auto=format&fit=crop&w=800" class="card-image" alt="Implementation">
-            <div class="feature-content">
-                <h3>Step 3: AI Monitoring</h3>
-                <p>Real-time autonomous threat detection and response deployed 24/7 to keep your data secure.</p>
-                <span class="learn-more-btn" onclick="toggleInfo('info3')">Learn More</span>
-                <div id="info3" class="more-info">Deployment of our autonomous SOC platform ensures your infrastructure is monitored every second of every day.</div>
-            </div>
-        </div>
-
+    <img src="https://images.unsplash.com/photo-1558494949-ef010cbdcc48?auto=format&fit=crop&w=800" class="card-image" alt="AI Monitoring">
+    <div class="feature-content" style="padding: 25px;">
+        <h3 style="color: #38bdf8; font-size: 1.2rem;">Step 3: AI Monitoring</h3>
+        <p style="color: #9ca3af; font-size: 0.95rem;">Real-time autonomous threat detection and response deployed 24/7.</p>
+        <span class="learn-more-btn" onclick="toggleInfo('info3')">Learn More</span>
+        <div id="info3" class="more-info">Deployment of our autonomous SOC platform ensures your infrastructure is monitored every second of every day.</div>
+    </div>
         <div class="feature-item">
             <img src="https://images.unsplash.com/photo-1522071820081-009f0129c71c?auto=format&fit=crop&w=800" class="card-image" alt="Support Team">
             <div class="feature-content">
