--- a/platform.html
+++ b/platform.html
@@ -1,15 +1,4 @@
-<nav>
-    <div class="nav-container">
-        <div class="logo">Cyberaidefenses</div>
-        <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="solutions.html">Solutions</a></li>
-            <li><a href="platform.html">Platform</a></li>
-            <li><a href="compliance.html">Compliance</a></li>
-            <li><a href="pricing.html" class="nav-cta">Get Started</a></li>
-        </ul>
-    </div>
-</nav><!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -18,29 +7,61 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header>
-        <h1>Our Platform</h1>
-        <p>Autonomous AI Security Operations for the Modern Cloud.</p>
-    </header>
 
-    <main>
-        <section>
-            <h2>Autonomous Threat Detection (ATD)</h2>
-            <p>Our platform utilizes advanced AI models to provide 24/7 monitoring of your AWS/Azure environments. We don't just find threats; we identify anomalous patterns and neutralize them before they can escalate.</p>
-        </section>
+<nav>
+    <div class="nav-container">
+        <div class="logo">CYBERAIDEFENSES.COM</div>
+        <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="solutions.html">Solutions</a></li>
+            <li><a href="platform.html" style="color: #38bdf8;">Platform</a></li>
+            <li><a href="compliance.html">Compliance</a></li>
+            <li><a href="pricing.html" class="nav-cta">CONTACT</a></li>
+        </ul>
+    </div>
+</nav>
 
-        <section>
-            <h2>Core Capabilities</h2>
-            <ul>
-                <li><strong>AI-SOC Monitoring:</strong> Continuous machine learning analysis of security logs.</li>
-                <li><strong>Vulnerability Management:</strong> Proactive identification of cloud misconfigurations.</li>
-                <li><strong>Automated Containment:</strong> Drastically reduced Time-to-Resolution (TTR) through instant incident response.</li>
-            </ul>
-        </section>
-    </main>
+<header class="container" style="text-align: center; padding: 100px 40px;">
+    <h1 style="font-size: 3rem; margin-bottom: 20px; color: #ffffff;">Our Platform</h1>
+    <p style="color: #9ca3af; font-size: 1.2rem;">Autonomous AI Security Operations for the Modern Cloud.</p>
+</header>
 
-    <footer>
-        <p>&copy; 2026 Cyberaidefenses LLC. All rights reserved.</p>
-    </footer>
+<main class="container">
+    <section style="margin-bottom: 60px; text-align: center;">
+        <h2 style="color: #38bdf8; font-size: 2rem;">Autonomous Threat Detection (ATD)</h2>
+        <p style="color: #9ca3af; max-width: 800px; margin: 20px auto; line-height: 1.8;">Our platform utilizes advanced AI models to provide 24/7 monitoring of your AWS/Azure environments. We don't just find threats; we identify anomalous patterns and neutralize them before they can escalate.</p>
+    </section>
+
+    <div class="features-grid">
+        <div class="feature-item">
+            <img src="https://images.unsplash.com/photo-1551288049-bebda4e38f71?auto=format&fit=crop&w=800" class="card-image" alt="AI-SOC">
+            <div style="padding: 25px;">
+                <h3>AI-SOC Monitoring</h3>
+                <p style="color: #9ca3af;">Continuous machine learning analysis of security logs to identify zero-day threats.</p>
+            </div>
+        </div>
+
+        <div class="feature-item">
+            <img src="https://images.unsplash.com/photo-1563986768609-322da13575f3?auto=format&fit=crop&w=800" class="card-image" alt="Vulnerability Management">
+            <div style="padding: 25px;">
+                <h3>Vulnerability Management</h3>
+                <p style="color: #9ca3af;">Proactive identification of cloud misconfigurations before they become entry points.</p>
+            </div>
+        </div>
+
+        <div class="feature-item">
+            <img src="https://images.unsplash.com/photo-1558494949-ef010cbdcc48?auto=format&fit=crop&w=800" class="card-image" alt="Automated Containment">
+            <div style="padding: 25px;">
+                <h3>Automated Containment</h3>
+                <p style="color: #9ca3af;">Drastically reduced Time-to-Resolution (TTR) through instant, AI-driven incident response.</p>
+            </div>
+        </div>
+    </div>
+</main>
+
+<footer class="container" style="text-align: center; padding: 60px 40px; color: #4b5563;">
+    <p>© 2026 Cyberaidefenses LLC. All rights reserved.</p>
+</footer>
+
 </body>
 </html>
