--- a/platform.html
+++ b/platform.html
@@ -10,50 +10,45 @@
 
 <nav>
     <div class="nav-container">
-        <div class="logo">CYBERAIDEFENSES.COM</div>
+        <div class="logo">Cyberaidefenses</div>
         <ul>
             <li><a href="index.html">Home</a></li>
             <li><a href="solutions.html">Solutions</a></li>
             <li><a href="platform.html" style="color: #38bdf8;">Platform</a></li>
             <li><a href="compliance.html">Compliance</a></li>
-            <li><a href="pricing.html" class="nav-cta">CONTACT</a></li>
+            <li><a href="pricing.html" class="nav-cta">Get Started</a></li>
         </ul>
     </div>
 </nav>
 
-<header class="container" style="text-align: center; padding: 100px 40px;">
-    <h1 style="font-size: 3rem; margin-bottom: 20px; color: #ffffff;">Our Platform</h1>
-    <p style="color: #9ca3af; font-size: 1.2rem;">Autonomous AI Security Operations for the Modern Cloud.</p>
+<header class="container" style="text-align: center; padding: 120px 40px;">
+    <h1 style="font-size: 3.5rem; margin-bottom: 20px;">The Autonomous SOC Platform</h1>
+    <p style="color: #9ca3af; font-size: 1.25rem; max-width: 800px; margin: 0 auto;">Our proprietary engine combines machine learning with automated response to secure your cloud 24/7.</p>
 </header>
 
 <main class="container">
-    <section style="margin-bottom: 60px; text-align: center;">
-        <h2 style="color: #38bdf8; font-size: 2rem;">Autonomous Threat Detection (ATD)</h2>
-        <p style="color: #9ca3af; max-width: 800px; margin: 20px auto; line-height: 1.8;">Our platform utilizes advanced AI models to provide 24/7 monitoring of your AWS/Azure environments. We don't just find threats; we identify anomalous patterns and neutralize them before they can escalate.</p>
-    </section>
-
     <div class="features-grid">
         <div class="feature-item">
-            <img src="https://images.unsplash.com/photo-1551288049-bebda4e38f71?auto=format&fit=crop&w=800" class="card-image" alt="AI-SOC">
+            <img src="https://images.unsplash.com/photo-1551288049-bebda4e38f71?auto=format&fit=crop&w=800" class="card-image" alt="Data Analytics">
             <div style="padding: 25px;">
-                <h3>AI-SOC Monitoring</h3>
-                <p style="color: #9ca3af;">Continuous machine learning analysis of security logs to identify zero-day threats.</p>
+                <h3>Autonomous Detection</h3>
+                <p style="color: #9ca3af;">Our AI scans billions of logs to identify zero-day threats and lateral movement within seconds.</p>
             </div>
         </div>
 
         <div class="feature-item">
-            <img src="https://images.unsplash.com/photo-1563986768609-322da13575f3?auto=format&fit=crop&w=800" class="card-image" alt="Vulnerability Management">
+            <img src="https://images.unsplash.com/photo-1563986768609-322da13575f3?auto=format&fit=crop&w=800" class="card-image" alt="Cloud Infrastructure">
             <div style="padding: 25px;">
                 <h3>Vulnerability Management</h3>
-                <p style="color: #9ca3af;">Proactive identification of cloud misconfigurations before they become entry points.</p>
+                <p style="color: #9ca3af;">Real-time identification of misconfigured AWS resources and unpatched cloud services.</p>
             </div>
         </div>
 
         <div class="feature-item">
-            <img src="https://images.unsplash.com/photo-1558494949-ef010cbdcc48?auto=format&fit=crop&w=800" class="card-image" alt="Automated Containment">
+            <img src="https://images.unsplash.com/photo-1558494949-ef010cbdcc48?auto=format&fit=crop&w=800" class="card-image" alt="Response Systems">
             <div style="padding: 25px;">
-                <h3>Automated Containment</h3>
-                <p style="color: #9ca3af;">Drastically reduced Time-to-Resolution (TTR) through instant, AI-driven incident response.</p>
+                <h3>Instant Containment</h3>
+                <p style="color: #9ca3af;">When a threat is verified, the platform automatically isolates the workload to prevent data exfiltration.</p>
             </div>
         </div>
     </div>
