--- a/index.html
+++ b/index.html
@@ -26,29 +26,39 @@
         <a href="pricing.html" class="payment-button">Start 30-Day Free Trial</a>
         <a href="solutions.html" class="secondary-btn">View Solutions</a>
     </div>
-</header>
 <header class="container" style="text-align: center; padding: 120px 40px;">
-    <h1 style="font-size: 3.5rem; margin-bottom: 20px;">Autonomous AI Security for the Modern Cloud</h1>
+    <h1 style="font-size: 3.5rem; margin-bottom: 20px; color: #ffffff;">Autonomous AI Security for the Modern Cloud</h1>
     <p style="color: #9ca3af; font-size: 1.25rem; max-width: 800px; margin: 0 auto;">Protecting mid-market enterprise infrastructure with 24/7 autonomous threat detection and SOC2-ready monitoring.</p>
 </header>
 
 <main class="container">
     <div class="features-grid">
         <div class="feature-item">
-            <h3>🛡️ AI-SOC Monitoring</h3>
-            <p>24/7 machine learning analysis of your security logs to catch threats humans miss.</p>
+            <img src="https://images.unsplash.com/photo-1550751827-4bd374c3f58b?auto=format&fit=crop&w=800" class="card-image" alt="AI-SOC">
+            <div style="padding: 25px;">
+                <h3>🛡️ AI-SOC Monitoring</h3>
+                <p style="color: #9ca3af;">24/7 machine learning analysis of security logs to identify zero-day threats.</p>
+            </div>
         </div>
+
         <div class="feature-item">
-            <h3>☁️ AWS Cloud Defense</h3>
-            <p>Purpose-built protection for AWS workloads, ensuring your infrastructure is hardened.</p>
+            <img src="https://images.unsplash.com/photo-1563986768609-322da13575f3?auto=format&fit=crop&w=800" class="card-image" alt="Cloud Defense">
+            <div style="padding: 25px;">
+                <h3>☁️ AWS Cloud Defense</h3>
+                <p style="color: #9ca3af;">Purpose-built protection for AWS workloads, ensuring infrastructure is hardened against attacks.</p>
+            </div>
         </div>
+
         <div class="feature-item">
-            <h3>⚡ Rapid Response</h3>
-            <p>Automated containment protocols that reduce your Time-to-Resolution (TTR) to seconds.</p>
+            <img src="https://images.unsplash.com/photo-1558494949-ef010cbdcc48?auto=format&fit=crop&w=800" class="card-image" alt="Rapid Response">
+            <div style="padding: 25px;">
+                <h3>⚡ Rapid Response</h3>
+                <p style="color: #9ca3af;">Automated containment protocols that reduce your Time-to-Resolution (TTR) to seconds.</p>
+            </div>
         </div>
     </div>
 </main>
-<footer>
+    <footer>
     <p>© 2026 Cyberaidefenses LLC. All rights reserved.</p>
 </footer>
 
