--- a/compliance.html
+++ b/compliance.html
@@ -1,15 +1,4 @@
-<nav>
-    <div class="nav-container">
-        <div class="logo">Cyberaidefenses</div>
-        <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="solutions.html">Solutions</a></li>
-            <li><a href="platform.html">Platform</a></li>
-            <li><a href="compliance.html">Compliance</a></li>
-            <li><a href="pricing.html" class="nav-cta">Get Started</a></li>
-        </ul>
-    </div>
-</nav><!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -19,29 +8,55 @@
 </head>
 <body>
 
-    <header>
-        <h1>Compliance & Governance</h1>
-        <p>Enterprise-grade security standards for your regulated data.</p>
-    </header>
+<nav>
+    <div class="nav-container">
+        <div class="logo">Cyberaidefenses</div>
+        <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="solutions.html">Solutions</a></li>
+            <li><a href="platform.html">Platform</a></li>
+            <li><a href="compliance.html" style="color: #38bdf8;">Compliance</a></li>
+            <li><a href="pricing.html" class="nav-cta">Get Started</a></li>
+        </ul>
+    </div>
+</nav>
 
-    <main>
-        <section>
-            <h2>Audit-Ready Monitoring</h2>
-            <p>We provide the evidence logs and continuous monitoring necessary to maintain compliance in highly regulated industries.</p>
-        </section>
+<header class="container" style="text-align: center; padding: 120px 40px;">
+    <h1 style="font-size: 3.5rem; margin-bottom: 20px; color: #ffffff;">Compliance & Governance</h1>
+    <p style="color: #9ca3af; font-size: 1.25rem; max-width: 800px; margin: 0 auto;">Enterprise-grade security standards for your regulated data.</p>
+</header>
 
-        <section>
-            <h2>Supported Standards</h2>
-            <ul>
-                <li><strong>SOC2 Type I & II:</strong> Continuous control monitoring for service organizations.</li>
-                <li><strong>HIPAA:</strong> Specialized PHI protection for healthcare-integrated platforms.</li>
-                <li><strong>Data Sovereignty:</strong> Strict encryption and access controls to ensure data privacy.</li>
-            </ul>
-        </section>
-    </main>
+<main class="container">
+    <div class="features-grid">
+        <div class="feature-item">
+            <img src="https://images.unsplash.com/photo-1454165833767-027ffea9e778?auto=format&fit=crop&w=800" class="card-image" alt="Audit Monitoring">
+            <div style="padding: 25px;">
+                <h3>Audit-Ready Monitoring</h3>
+                <p style="color: #9ca3af;">Continuous evidence logging and real-time monitoring to maintain compliance in highly regulated industries.</p>
+            </div>
+        </div>
 
-    <footer>
-        <p>&copy; 2026 Cyberaidefenses LLC. All rights reserved.</p>
-    </footer>
+        <div class="feature-item">
+            <img src="https://images.unsplash.com/photo-1550751827-4bd374c3f58b?auto=format&fit=crop&w=800" class="card-image" alt="Supported Standards">
+            <div style="padding: 25px;">
+                <h3>Supported Standards</h3>
+                <p style="color: #9ca3af;">Full support for SOC2 Type I & II, HIPAA, and custom framework alignment for your business.</p>
+            </div>
+        </div>
+
+        <div class="feature-item">
+            <img src="https://images.unsplash.com/photo-1563986768609-322da13575f3?auto=format&fit=crop&w=800" class="card-image" alt="Data Sovereignty">
+            <div style="padding: 25px;">
+                <h3>Data Sovereignty</h3>
+                <p style="color: #9ca3af;">Strict encryption and access controls that ensure your data remains private and resides in authorized zones.</p>
+            </div>
+        </div>
+    </div>
+</main>
+
+<footer class="container" style="text-align: center; padding: 60px 40px; color: #4b5563;">
+    <p>© 2026 Cyberaidefenses LLC. All rights reserved.</p>
+</footer>
+
 </body>
 </html>
